# ai-contract-translator

./: .gitignore  README.md  pyproject.toml  requirements.txt  review_translation.py  translate_en2ja.py  translate_ja2en.py  translate_ocr_en2ja.py  translate_ocr_ja2en.py
samples/: sample_contract_en.docx  sample_contract_en.txt  sample_contract_ja.docx  sample_contract_ja.txt
